fixed alignment

--- a/mystyle.css
+++ b/mystyle.css
@@ -109,7 +109,7 @@ h2{
 .Content-Info{
     display: flex;
     flex-wrap: wrap;
-  justify-content:flex-start;
+  justify-content:center;
   
    gap: 20px;
    margin: 0 auto;
